Subida de página 1.0

--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-Hello World
+<!DOCTYPE html>
+<html lang = "en">
+<head>
+    <meta charset = "UTF-8">
+    <title> Ascranima </title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <div class="container">
+      <nav>
+        <a href="index.html" class="logo"><img src="img/Logo-01.svg" alt="ascranimaLogo"></a>
+        <ul class="nav-links">
+          <li class="nav-item"><a href="index.html">Inicio</a></li>
+          <li class="nav-item"><a href="ilustracion.html">Ilustración</a></li>
+          <li class="nav-item"><a href="identidad.html">Identidad</a></li>
+          <li class="nav-item"><a href="marketing.html">Marketing</a></li>
+          <li class="nav-item"><a href="acerca.html">Acerca</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    </header>
+
+  <main>
+
+    <div class="bannerContent">
+      <img class="banner" src="img/Pavo.jpg" alt="">
+      <div class="titular container">
+          <h1>Creatividad y diversión</h1>
+          <p>Soy un estudiante apasionado por el diseño gráfico con un enfoque en el UX Design y el desarrollo web. Actualmente estoy estudiando en la Universidad Nacional de Colombia y busco oportunidades en la industria de los videojuegos. </p>
+        
+          <p>Estoy emocionado de aplicar mis habilidades y conocimientos en una posición de desarrollador web en la industria de los videojuegos. Me gustaría formar parte de un equipo innovador y dedicado a crear experiencias emocionantes para los usuarios.</p></p>
+
+        <ul class="rs-links">
+          <li class="rs-items"><a href="https://www.instagram.com/hkroosy1/"><img src="img/instagram.png" alt=""></a></li>
+          <li class="rs-items"><a href="https://twitter.com/Hkroosy1"><img src="img/twitter.png" alt=""></a></li>
+          <li class="rs-items"><a href="https://www.behance.net/axelcastro4"><img src="img/behance.png" alt=""></a></li>
+          <li class="rs-items"><a href="https://www.linkedin.com/in/axel-castro-9b7472236/"><img src="img/linkedin.png" alt=""></a></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="content container">
+      <div class="contIlustracion">
+
+        <h1 class="titularSectionTitle">Ilustración</h1>
+        <div class="gallery">
+          <figure class= "gallery__item gallery__item--1">
+            <img src="img/bosque.jpg" class="gallery__img" alt="Image 1">
+          </figure>
+
+          <figure class="gallery__item gallery__item--2">
+            <img src="img/dragon.jpg" class="gallery__img" alt="Image 2">
+          </figure>
+
+          <figure class="gallery__item gallery__item--3">
+            <img src="img/70s.jpg" class="gallery__img" alt="Image 3">
+          </figure>
+
+          <figure class="gallery__item gallery__item--4">
+            <img src="img/Postal 5.jpg" class="gallery__img" alt="Image 4">
+          </figure>
+        </div>
+      </div>
+
+      <div class="contIdentidad">
+        <h1 class="titularSectionTitle">Identidad</h1>
+        <div class="gallery">
+          <figure class= "gallery__item gallery__item--5">
+            <img src="img/Camiseta-ari.jpg" class="gallery__img" alt="Image 5">
+          </figure>
+
+          <figure class="gallery__item gallery__item--6">
+            <img src="img/Carpeta-exagon.jpg" class="gallery__img" alt="Image 6">
+          </figure>
+
+          <figure class="gallery__item gallery__item--7">
+            <img src="img/Lata.jpg" class="gallery__img" alt="Image 7">
+          </figure>
+
+          <figure class="gallery__item gallery__item--8">
+            <img src="img/postal-11.jpg" class="gallery__img" alt="Image 8">
+          </figure>
+
+          <figure class="gallery__item gallery__item--9">
+            <img src="img/Delantal.jpg" class="gallery__img" alt="Image 9">
+          </figure>
+        </div>
+      </div>
+
+      <div class="contMarketing">
+        <h1 class="titularSectionTitle">Marketing</h1>
+        <div class="gallery">
+          <figure class= "gallery__item gallery__item--10">
+            <img src="img/BannerSG-01.jpg" class="gallery__img" alt="Image 10">
+          </figure>
+
+          <figure class="gallery__item gallery__item--11">
+            <img src="img/BD PROMO 1108-02.jpg" class="gallery__img" alt="Image 11">
+          </figure>
+
+          <figure class="gallery__item gallery__item--12">
+            <img src="img/CN2_1.jpg" class="gallery__img" alt="Image 12">
+          </figure>
+
+          <figure class="gallery__item gallery__item--13">
+            <img src="img/no promo_Mesa de trabajo 1.jpg" class="gallery__img" alt="Image 13">
+          </figure>
+
+          <figure class="gallery__item gallery__item--14">
+            <img src="img/Pide Yogen_Mesa de trabajo 1.jpg" class="gallery__img" alt="Image 14">
+          </figure>
+
+          <figure class="gallery__item gallery__item--15">
+            <img src="img/Pizza one 2.jpg" class="gallery__img" alt="Image 15">
+          </figure>
+
+          <figure class="gallery__item gallery__item--16">
+            <img src="img/Sub final.jpg" class="gallery__img" alt="Image 16">
+          </figure>
+
+        </div>
+      </div>
+
+    </div>
+
+  </main>
+
+  <footer>
+    <h2>Página creada por Axel Castro ©</h2>
+
+  </footer>
+</body>
+</html>
