correcion ilustracion.html

--- a/ilustracion.html
+++ b/ilustracion.html
@@ -134,7 +134,7 @@
           </figure>
 
           <figure class="gallery__item gallery__item--38">
-            <img src="img/pereza.png" class="gallery__img" alt="Image 38">
+            <img src="img/Pereza.png" class="gallery__img" alt="Image 38">
             <p class="pPecado">Pereza</p>
           </figure>
 
@@ -149,7 +149,7 @@
           </figure>
 
           <figure class="gallery__item gallery__item--41">
-            <img src="img/soberbia.png" class="gallery__img" alt="Image 41">
+            <img src="img/Soberbia.png" class="gallery__img" alt="Image 41">
             <p>Soberbia</p>
           </figure>
 
@@ -162,7 +162,7 @@
 
         <div class="gallery2">
           <figure class= "gallery__item gallery__item--42">
-            <img src="img/PAVO.JPG" class="gallery__img" alt="Image 42">
+            <img src="img/Pavo.jpg" class="gallery__img" alt="Image 42">
           </figure>
 
           <figure class="gallery__item gallery__item--43">
