--- a/index.html
+++ b/index.html
@@ -26,19 +26,20 @@
   <main>
 
     <div class="bannerContent">
-      <img class="banner" src="img/Pavo.jpg" alt="">
-      <div class="titular container">
-          <h1>Creatividad y diversión</h1>
-          <p>Soy un estudiante apasionado por el diseño gráfico con un enfoque en el UX Design y el desarrollo web. Actualmente estoy estudiando en la Universidad Nacional de Colombia y busco oportunidades en la industria de los videojuegos. </p>
-        
-          <p>Estoy emocionado de aplicar mis habilidades y conocimientos en una posición de desarrollador web en la industria de los videojuegos. Me gustaría formar parte de un equipo innovador y dedicado a crear experiencias emocionantes para los usuarios.</p></p>
+        <div class="container hero">
+            <div class="titular">
+                <h1>Creatividad y diversión</h1>
+                <p>Soy un estudiante apasionado por el diseño gráfico con un enfoque en el UX Design y el desarrollo web. Actualmente estoy estudiando en la Universidad Nacional de Colombia y busco oportunidades en la industria de los videojuegos. </p>
+              
+                <p>Estoy emocionado de aplicar mis habilidades y conocimientos en una posición de desarrollador web en la industria de los videojuegos. Me gustaría formar parte de un equipo innovador y dedicado a crear experiencias emocionantes para los usuarios.</p></p>
 
-        <ul class="rs-links">
-          <li class="rs-items"><a href="https://www.instagram.com/hkroosy1/"><img src="img/instagram.png" alt=""></a></li>
-          <li class="rs-items"><a href="https://twitter.com/Hkroosy1"><img src="img/twitter.png" alt=""></a></li>
-          <li class="rs-items"><a href="https://www.behance.net/axelcastro4"><img src="img/behance.png" alt=""></a></li>
-          <li class="rs-items"><a href="https://www.linkedin.com/in/axel-castro-9b7472236/"><img src="img/linkedin.png" alt=""></a></li>
-        </ul>
+                <ul class="rs-links">
+                  <li class="rs-items"><a href="https://www.instagram.com/hkroosy1/"><img src="img/instagram.png" alt=""></a></li>
+                  <li class="rs-items"><a href="https://twitter.com/Hkroosy1"><img src="img/twitter.png" alt=""></a></li>
+                  <li class="rs-items"><a href="https://www.behance.net/axelcastro4"><img src="img/behance.png" alt=""></a></li>
+                  <li class="rs-items"><a href="https://www.linkedin.com/in/axel-castro-9b7472236/"><img src="img/linkedin.png" alt=""></a></li>
+                </ul>
+            </div>
       </div>
     </div>
 
