Agregado el pop up a la página index

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset = "UTF-8">
-    <title> Ascranima </title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title> Ascranima </title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="magnific-popup.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -21,25 +28,33 @@
       </nav>
     </div>
 
-    </header>
+  </header>
 
   <main>
 
     <div class="bannerContent">
-        <div class="container hero">
-            <div class="titular">
-                <h1>Creatividad y diversión</h1>
-                <p>Soy un estudiante apasionado por el diseño gráfico con un enfoque en el UX Design y el desarrollo web. Actualmente estoy estudiando en la Universidad Nacional de Colombia y busco oportunidades en la industria de los videojuegos. </p>
-              
-                <p>Estoy emocionado de aplicar mis habilidades y conocimientos en una posición de desarrollador web en la industria de los videojuegos. Me gustaría formar parte de un equipo innovador y dedicado a crear experiencias emocionantes para los usuarios.</p></p>
+      <div class="container hero">
+        <div class="titular">
+          <h1>Creatividad y diversión</h1>
+          <p>Soy un estudiante apasionado por el diseño gráfico con un enfoque en el UX Design y el desarrollo web.
+            Actualmente estoy estudiando en la Universidad Nacional de Colombia y busco oportunidades en la industria de
+            los videojuegos. </p>
 
-                <ul class="rs-links">
-                  <li class="rs-items"><a href="https://www.instagram.com/hkroosy1/"><img src="img/instagram.png" alt=""></a></li>
-                  <li class="rs-items"><a href="https://twitter.com/Hkroosy1"><img src="img/twitter.png" alt=""></a></li>
-                  <li class="rs-items"><a href="https://www.behance.net/axelcastro4"><img src="img/behance.png" alt=""></a></li>
-                  <li class="rs-items"><a href="https://www.linkedin.com/in/axel-castro-9b7472236/"><img src="img/linkedin.png" alt=""></a></li>
-                </ul>
-            </div>
+          <p>Estoy emocionado de aplicar mis habilidades y conocimientos en una posición de desarrollador web en la
+            industria de los videojuegos. Me gustaría formar parte de un equipo innovador y dedicado a crear
+            experiencias emocionantes para los usuarios.</p>
+          </p>
+
+          <ul class="rs-links">
+            <li class="rs-items"><a href="https://www.instagram.com/hkroosy1/"><img src="img/instagram.png" alt=""></a>
+            </li>
+            <li class="rs-items"><a href="https://twitter.com/Hkroosy1"><img src="img/twitter.png" alt=""></a></li>
+            <li class="rs-items"><a href="https://www.behance.net/axelcastro4"><img src="img/behance.png" alt=""></a>
+            </li>
+            <li class="rs-items"><a href="https://www.linkedin.com/in/axel-castro-9b7472236/"><img
+                  src="img/linkedin.png" alt=""></a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -47,79 +62,112 @@
       <div class="contIlustracion">
 
         <h1 class="titularSectionTitle">Ilustración</h1>
-        <div class="gallery">
-          <figure class= "gallery__item gallery__item--1">
-            <img src="img/bosque.jpg" class="gallery__img" alt="Image 1">
+        <div class="gallery popup-link">
+          <figure class="gallery__item gallery__item--1">
+            <a href="img/bosque.jpg"> 
+              <img src="img/bosque.jpg" class="gallery__img" alt="Image 1">
+            </a>
+             
           </figure>
 
           <figure class="gallery__item gallery__item--2">
+            <a href="img/dragon.jpg"> 
             <img src="img/dragon.jpg" class="gallery__img" alt="Image 2">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--3">
+            <a href="img/70s.jpg"> 
             <img src="img/70s.jpg" class="gallery__img" alt="Image 3">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--4">
+            <a href="img/Postal 5.jpg"> 
             <img src="img/Postal 5.jpg" class="gallery__img" alt="Image 4">
+            </a>
           </figure>
         </div>
       </div>
 
       <div class="contIdentidad">
         <h1 class="titularSectionTitle">Identidad</h1>
-        <div class="gallery">
-          <figure class= "gallery__item gallery__item--5">
+        <div class="gallery popup-link">
+          <figure class="gallery__item gallery__item--5">
+            <a href="img/Camiseta-ari.jpg">
             <img src="img/Camiseta-ari.jpg" class="gallery__img" alt="Image 5">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--6">
+            <a href="img/Carpeta-exagon.jpg">
             <img src="img/Carpeta-exagon.jpg" class="gallery__img" alt="Image 6">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--7">
+            <a href="img/Lata.jpg">
             <img src="img/Lata.jpg" class="gallery__img" alt="Image 7">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--8">
+            <a href="img/postal-11.jpg">
             <img src="img/postal-11.jpg" class="gallery__img" alt="Image 8">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--9">
+            <a href="img/Delantal.jpg">
             <img src="img/Delantal.jpg" class="gallery__img" alt="Image 9">
+            </a>
           </figure>
         </div>
       </div>
 
       <div class="contMarketing">
         <h1 class="titularSectionTitle">Marketing</h1>
-        <div class="gallery">
-          <figure class= "gallery__item gallery__item--10">
+        <div class="gallery popup-link">
+          <figure class="gallery__item gallery__item--10">
+            <a href="img/BannerSG-01.jpg">
             <img src="img/BannerSG-01.jpg" class="gallery__img" alt="Image 10">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--11">
+            <a href="img/BD PROMO 1108-02.jpg">
             <img src="img/BD PROMO 1108-02.jpg" class="gallery__img" alt="Image 11">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--12">
+            <a href="img/CN2_1.jpg">
             <img src="img/CN2_1.jpg" class="gallery__img" alt="Image 12">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--13">
+            <a href="img/no promo_Mesa de trabajo 1.jpg">
             <img src="img/no promo_Mesa de trabajo 1.jpg" class="gallery__img" alt="Image 13">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--14">
+            <a href="img/Pide Yogen_Mesa de trabajo 1.jpg">
             <img src="img/Pide Yogen_Mesa de trabajo 1.jpg" class="gallery__img" alt="Image 14">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--15">
+            <a href="img/Pizza one 2.jpg">
             <img src="img/Pizza one 2.jpg" class="gallery__img" alt="Image 15">
+            </a>
           </figure>
 
           <figure class="gallery__item gallery__item--16">
+            <a href="img/Sub final.jpg">
             <img src="img/Sub final.jpg" class="gallery__img" alt="Image 16">
+            </a>
           </figure>
 
         </div>
@@ -133,5 +181,12 @@
     <h2>Página creada por Axel Castro ©</h2>
 
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+  <script src="main.js"></script>
+
 </body>
+
+
 </html>
