Cambio de galerias para el resto de paginas

--- a/identidad.html
+++ b/identidad.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset = "UTF-8">
-    <title> Ascranima </title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title> Identidad </title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="magnific-popup.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"> --> 
+ <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -30,32 +38,44 @@
 
       <p>Marca personal para diseñadora</p>
 
-      <div class="gallery3">
-        <figure class= "gallery__item gallery__item--51 png">
+      <div class="gallery3 popup-link">
+        <figure class="gallery__item gallery__item--51 png">
+          <a href="img/Pulido.png">
           <img src="img/Pulido.png" class="gallery__img" alt="Image 51">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--52">
+        <figure class="gallery__item gallery__item--52">
+          <a href="img/Delantal.jpg">
           <img src="img/Delantal.jpg" class="gallery__img" alt="Image 52">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--53">
+        <figure class="gallery__item gallery__item--53">
+          <a href="img/Almohada 2.jpg">
           <img src="img/Almohada 2.jpg" class="gallery__img" alt="Image 53">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--54">
+        <figure class="gallery__item gallery__item--54">
+          <a href="img/Papeleria.jpg">
           <img src="img/Papeleria.jpg" class="gallery__img" alt="Image 54">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--55">
+        <figure class="gallery__item gallery__item--55">
+          <a href="img/Carpeta f.jpg">
           <img src="img/Carpeta f.jpg" class="gallery__img" alt="Image 55">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--56">
+        <figure class="gallery__item gallery__item--56">
+          <a href="img/Almohada.jpg">
           <img src="img/Almohada.jpg" class="gallery__img" alt="Image 56">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--57">
+        <figure class="gallery__item gallery__item--57">
           <p class="textIdentidad">
             Hablando con Alejandra descubrí en ella una pasión sobre la naturaleza y
             más sobre la naturalidad, tanto en el entorno como en el cuerpo. <br><br>
@@ -82,32 +102,44 @@
 
       <p>Identidad corporativa para producto químico</p>
 
-      <div class="gallery3">
-        <figure class= "gallery__item gallery__item--58 png">
+      <div class="gallery3 popup-link">
+        <figure class="gallery__item gallery__item--58 png">
+          <a href="img/exagon.png">
           <img src="img/exagon.png" class="gallery__img" alt="Image 58">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--59">
+        <figure class="gallery__item gallery__item--59">
+          <a href="img/Bolsa.jpg">
           <img src="img/Bolsa.jpg" class="gallery__img" alt="Image 59">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--60">
+        <figure class="gallery__item gallery__item--60">
+          <a href="img/exagon pantalla.jpg">
           <img src="img/exagon pantalla.jpg" class="gallery__img" alt="Image 60">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--61">
+        <figure class="gallery__item gallery__item--61">
+          <a href="img/Pendrive.jpg">
           <img src="img/Pendrive.jpg" class="gallery__img" alt="Image 61">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--62">
+        <figure class="gallery__item gallery__item--62">
+          <a href="img/Carpeta-exagon.jpg">
           <img src="img/Carpeta-exagon.jpg" class="gallery__img" alt="Image 62">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--63">
+        <figure class="gallery__item gallery__item--63">
+          <a href="img/Goteros.jpg">
           <img src="img/Goteros.jpg" class="gallery__img" alt="Image 63">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--64">
+        <figure class="gallery__item gallery__item--64">
           <p class="textIdentidad">
             La identidad visual de Exagon tiene un concepto enfocado en la dualidad de
             Industria-Ecología que presenta la empresa. Este concepto explicito en la
@@ -127,42 +159,60 @@
     <section class="container">
       <h1 class="titularSectionTitle">Otros desarrollos de identidad</h1>
 
-      <div class="gallery3">
-        <figure class= "gallery__item gallery__item--65 png">
+      <div class="gallery3 popup-link">
+        <figure class="gallery__item gallery__item--65 png">
+          <a href="img/Ari Bakery-09.png">
           <img src="img/Ari Bakery-09.png" class="gallery__img" alt="Image 65">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--66 png">
+        <figure class="gallery__item gallery__item--66 png">
+          <a href="img/TuPlazoleta.png">
           <img src="img/TuPlazoleta.png" class="gallery__img" alt="Image 66">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--67 png">
+        <figure class="gallery__item gallery__item--67 png">
+          <a href="img/Logo-01.svg">
           <img src="img/Logo-01.svg" class="gallery__img" alt="Image 67">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--68 png">
+        <figure class="gallery__item gallery__item--68 png">
+          <a href="img/Cygnus final 1-02.png">
           <img src="img/Cygnus final 1-02.png" class="gallery__img" alt="Image 68">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--69">
+        <figure class="gallery__item gallery__item--69">
+          <a href="img/Camiseta-ari.jpg">
           <img src="img/Camiseta-ari.jpg" class="gallery__img" alt="Image 69">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--70">
+        <figure class="gallery__item gallery__item--70">
+          <a href="img/TuPlazoleta.jpg">
           <img src="img/TuPlazoleta.jpg" class="gallery__img" alt="Image 70">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--71">
+        <figure class="gallery__item gallery__item--71">
+          <a href="img/Lata.jpg">
           <img src="img/Lata.jpg" class="gallery__img" alt="Image 71">
+          </a>
         </figure>
 
 
-        <figure class= "gallery__item gallery__item--72">
+        <figure class="gallery__item gallery__item--72">
+          <a href="img/Apron MockUp PSD.jpg">
           <img src="img/Apron MockUp PSD.jpg" class="gallery__img" alt="Image 72">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--73">
+        <figure class="gallery__item gallery__item--73">
+          <a href="img/tuplaz_promo2.jpg">
           <img src="img/tuplaz_promo2.jpg" class="gallery__img" alt="Image 73">
+          </a>
         </figure>
 
 
@@ -176,5 +226,11 @@
     <h2>Página creada por Axel Castro ©</h2>
 
   </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+  <script src="main.js"></script>
+
 </body>
+
 </html>
