--- a/ilustracion.html
+++ b/ilustracion.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset = "UTF-8">
-    <title> Ascranima </title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title> Ilustración </title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="magnific-popup.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"> -->
+  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -29,175 +37,243 @@
       <h1 class="titularSectionTitle">Postales - Mi Barrio</h1>
       <p>Dirección, fotografía y edición Axel Castro - Ilustración Daniel Palchucán</p>
 
-      <div class="gallery">
-        <figure class= "gallery__item gallery__item--17">
-          <img src="img/Postal 1.jpg" class="gallery__img" alt="Image 17">
+      <div class="gallery popup-link">
+        <figure class="gallery__item gallery__item--17">
+          <a href="img/Postal 1.jpg">
+            <img src="img/Postal 1.jpg" class="gallery__img" alt="Image 17">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--18">
-          <img src="img/Postal 2.jpg" class="gallery__img" alt="Image 18">
+          <a href="img/Postal 2.jpg">
+            <img src="img/Postal 2.jpg" class="gallery__img" alt="Image 18">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--19">
-          <img src="img/Postal 3.jpg" class="gallery__img" alt="Image 19">
+          <a href="img/Postal 3.jpg">
+            <img src="img/Postal 3.jpg" class="gallery__img" alt="Image 19">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--20">
-          <img src="img/Postal 4.jpg" class="gallery__img" alt="Image 20">
+          <a href="img/Postal 4.jpg">
+            <img src="img/Postal 4.jpg" class="gallery__img" alt="Image 20">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--21">
-          <img src="img/Postal 5.jpg" class="gallery__img" alt="Image 21">
+          <a href="img/Postal 5.jpg">
+            <img src="img/Postal 5.jpg" class="gallery__img" alt="Image 21">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--22">
-          <img src="img/Postal 6.jpg" class="gallery__img" alt="Image 22">
+          <a href="img/Postal 6.jpg">
+            <img src="img/Postal 6.jpg" class="gallery__img" alt="Image 22">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--23">
-          <img src="img/Postal 7.jpg" class="gallery__img" alt="Image 23">
+        <figure class="gallery__item gallery__item--23">
+          <a href="img/Postal 7.jpg">
+            <img src="img/Postal 7.jpg" class="gallery__img" alt="Image 23">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--24">
-          <img src="img/Postal 8.jpg" class="gallery__img" alt="Image 24">
+          <a href="img/Postal 8.jpg">
+            <img src="img/Postal 8.jpg" class="gallery__img" alt="Image 24">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--25">
-          <img src="img/Postal 9.jpg" class="gallery__img" alt="Image 25">
+          <a href="img/Postal 9.jpg">
+            <img src="img/Postal 9.jpg" class="gallery__img" alt="Image 25">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--26">
-          <img src="img/Postal 10.jpg" class="gallery__img" alt="Image 26">
+          <a href="img/Postal 10.jpg">
+            <img src="img/Postal 10.jpg" class="gallery__img" alt="Image 26">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--27">
-          <img src="img/Postal 11.jpg" class="gallery__img" alt="Image 27">
+          <a href="img/Postal 11.jpg">
+            <img src="img/Postal 11.jpg" class="gallery__img" alt="Image 27">
+          </a>
         </figure>
 
         <figure class="gallery__item gallery__item--28">
-          <img src="img/Postal 12.jpg" class="gallery__img" alt="Image 28">
+          <a href="img/Postal 12.jpg">
+            <img src="img/Postal 12.jpg" class="gallery__img" alt="Image 28">
+          </a>
         </figure>
 
       </div>
     </section>
 
     <section class="container">
-        <h1 class="titularSectionTitle">Serie Gráfica - Mi habitación por décadas</h1>
-        <p>-</p>
+      <h1 class="titularSectionTitle">Serie Gráfica - Mi habitación por décadas</h1>
+      <p>-</p>
 
-        <div class="gallery2">
-          <figure class= "gallery__item gallery__item--29">
+      <div class="gallery2 popup-link">
+        <figure class="gallery__item gallery__item--29">
+          <a href="img/60s.jpg">
             <img src="img/60s.jpg" class="gallery__img" alt="Image 29">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--30">
+        <figure class="gallery__item gallery__item--30">
+          <a href="img/70s.jpg">
             <img src="img/70s.jpg" class="gallery__img" alt="Image 30">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--31">
+        <figure class="gallery__item gallery__item--31">
+          <a href="img/80s.jpg">
             <img src="img/80s.jpg" class="gallery__img" alt="Image 31">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--32">
+        <figure class="gallery__item gallery__item--32">
+          <a href="img/90s.jpg">
             <img src="img/90s.jpg" class="gallery__img" alt="Image 32">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--33">
+        <figure class="gallery__item gallery__item--33">
+          <a href="img/00s.jpg">
             <img src="img/00s.jpg" class="gallery__img" alt="Image 33">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--34">
+        <figure class="gallery__item gallery__item--34">
+          <a href="img/10s.jpg">
             <img src="img/10s.jpg" class="gallery__img" alt="Image 34">
-          </figure>
+          </a>
+        </figure>
 
-        </div>
+      </div>
     </section>
 
     <section class="container">
-        <h1 class="titularSectionTitle">Diseño de personajes - 7 Pecados capitales</h1>
-        <p>-</p>
+      <h1 class="titularSectionTitle">Diseño de personajes - 7 Pecados capitales</h1>
+      <p>-</p>
 
-        <div class="gallery2">
-          <figure class= "gallery__item gallery__item--35">
+      <div class="gallery2 popup-link">
+        <figure class="gallery__item gallery__item--35">
+          <a href="img/envidia.png">
             <img src="img/envidia.png" class="gallery__img" alt="Image 35">
-            <p class="pPecado">Envidia</p>
-          </figure>
+          </a>
+          <p class="pPecado">Envidia</p>
+        </figure>
 
-          <figure class="gallery__item gallery__item--36">
+        <figure class="gallery__item gallery__item--36">
+          <a href="img/avaricia.png">
             <img src="img/avaricia.png" class="gallery__img" alt="Image 36">
-            <p class="pPecado">Avaricia</p>
-          </figure>
+          </a>
+          <p class="pPecado">Avaricia</p>
+        </figure>
 
-          <figure class="gallery__item gallery__item--37">
+        <figure class="gallery__item gallery__item--37">
+          <a href="img/gula.png">
             <img src="img/gula.png" class="gallery__img" alt="Image 37">
-            <p class="pPecado">Gula</p>
-          </figure>
+          </a>
+          <p class="pPecado">Gula</p>
+        </figure>
 
-          <figure class="gallery__item gallery__item--38">
+        <figure class="gallery__item gallery__item--38">
+          <a href="img/Pereza.png">
             <img src="img/Pereza.png" class="gallery__img" alt="Image 38">
-            <p class="pPecado">Pereza</p>
-          </figure>
+          </a>
+          <p class="pPecado">Pereza</p>
+        </figure>
 
-          <figure class="gallery__item gallery__item--39">
+        <figure class="gallery__item gallery__item--39">
+          <a href="img/ira.png">
             <img src="img/ira.png" class="gallery__img" alt="Image 39">
-            <p class="pPecado">Ira</p>
-          </figure>
+          </a>
+          <p class="pPecado">Ira</p>
+        </figure>
 
-          <figure class="gallery__item gallery__item--40">
+        <figure class="gallery__item gallery__item--40">
+          <a href="img/lujuria.png">
             <img src="img/lujuria.png" class="gallery__img" alt="Image 40">
-            <p class="pPecado">Lujuria</p>
-          </figure>
+          </a>
+          <p class="pPecado">Lujuria</p>
+        </figure>
 
-          <figure class="gallery__item gallery__item--41">
+        <figure class="gallery__item gallery__item--41">
+          <a href="img/Soberbia.png">
             <img src="img/Soberbia.png" class="gallery__img" alt="Image 41">
-            <p>Soberbia</p>
-          </figure>
+          </a>
+          <p>Soberbia</p>
+        </figure>
 
-        </div>
+      </div>
     </section>
 
     <section class="container">
-        <h1 class="titularSectionTitle">Otras ilustraciones varias</h1>
-        <p>-</p>
+      <h1 class="titularSectionTitle">Otras ilustraciones varias</h1>
+      <p>-</p>
 
-        <div class="gallery2">
-          <figure class= "gallery__item gallery__item--42">
+      <div class="gallery2 popup-link">
+        <figure class="gallery__item gallery__item--42">
+          <a href="img/Pavo.jpg">
             <img src="img/Pavo.jpg" class="gallery__img" alt="Image 42">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--43">
+        <figure class="gallery__item gallery__item--43">
+          <a href="img/El fin de la eternidad.jpg">
             <img src="img/El fin de la eternidad.jpg" class="gallery__img" alt="Image 43">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--44">
+        <figure class="gallery__item gallery__item--44">
+          <a href="img/Fakemons 1.jpg">
             <img src="img/Fakemons 1.jpg" class="gallery__img" alt="Image 44">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--45">
+        <figure class="gallery__item gallery__item--45">
+          <a href="img/Fakemons 2.jpg">
             <img src="img/Fakemons 2.jpg" class="gallery__img" alt="Image 45">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--46">
+        <figure class="gallery__item gallery__item--46">
+          <a href="img/Doggo.jpg">
             <img src="img/Doggo.jpg" class="gallery__img" alt="Image 46">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--47">
+        <figure class="gallery__item gallery__item--47">
+          <a href="img/Atico 1.jpg">
             <img src="img/Atico 1.jpg" class="gallery__img" alt="Image 47">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--48">
+        <figure class="gallery__item gallery__item--48">
+          <a href="img/dragon.jpg">
             <img src="img/dragon.jpg" class="gallery__img" alt="Image 48">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--49">
+        <figure class="gallery__item gallery__item--49">
+          <a href="img/bosque.jpg">
             <img src="img/bosque.jpg" class="gallery__img" alt="Image 49">
-          </figure>
+          </a>
+        </figure>
 
-          <figure class="gallery__item gallery__item--50">
+        <figure class="gallery__item gallery__item--50">
+          <a href="img/Elefante Final.jpg">
             <img src="img/Elefante Final.jpg" class="gallery__img" alt="Image 50">
-          </figure>
+          </a>
+        </figure>
 
-        </div>
+      </div>
     </section>
 
 
@@ -207,5 +283,9 @@
     <h2>Página creada por Axel Castro ©</h2>
 
   </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
