--- a/acerca.html
+++ b/acerca.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset = "UTF-8">
-    <title> Ascranima </title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title> Acerca </title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="magnific-popup.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"> --> 
+ <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -29,7 +37,7 @@
       <h1 class="titularSectionTitle">Axel Castro</h1>
       <p>Estudiante de Diseño Gráfico - Universidad Nacional de Colombia</p>
       <div class="gallery">
-        <figure class= "gallery__item gallery__item--89">
+        <figure class="gallery__item gallery__item--89">
           <img src="img/img_1.jpg" class="gallery__img" alt="Image 89">
         </figure>
 
@@ -63,10 +71,13 @@
 
         <figure class="gallery__item gallery__item--91">
           <ul class="rs-links links">
-            <li class="rs-items"><a href="https://www.instagram.com/hkroosy1/"><img src="img/instagram.png" alt=""></a></li>
+            <li class="rs-items"><a href="https://www.instagram.com/hkroosy1/"><img src="img/instagram.png" alt=""></a>
+            </li>
             <li class="rs-items"><a href="https://twitter.com/Hkroosy1"><img src="img/twitter.png" alt=""></a></li>
-            <li class="rs-items"><a href="https://www.behance.net/axelcastro4"><img src="img/behance.png" alt=""></a></li>
-            <li class="rs-items"><a href="https://www.linkedin.com/in/axel-castro-9b7472236/"><img src="img/linkedin.png" alt=""></a></li>
+            <li class="rs-items"><a href="https://www.behance.net/axelcastro4"><img src="img/behance.png" alt=""></a>
+            </li>
+            <li class="rs-items"><a href="https://www.linkedin.com/in/axel-castro-9b7472236/"><img
+                  src="img/linkedin.png" alt=""></a></li>
           </ul>
         </figure>
       </div>
@@ -79,4 +90,5 @@
 
   </footer>
 </body>
+
 </html>
