--- a/marketing.html
+++ b/marketing.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
+
 <head>
-    <meta charset = "UTF-8">
-    <title> Ascranima </title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title> Marketing </title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="magnific-popup.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"> --> 
+ <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <div class="container">
@@ -30,65 +38,95 @@
 
       <p>Servicios estratégicas A y J</p>
 
-      <div class="gallery3">
-        <figure class= "gallery__item gallery__item--74">
+      <div class="gallery3 popup-link">
+        <figure class="gallery__item gallery__item--74">
+          <a href="img/BannerSG-01.jpg">
           <img src="img/BannerSG-01.jpg" class="gallery__img" alt="Image 74">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--75">
+        <figure class="gallery__item gallery__item--75">
+          <a href="img/BD PROMO 1108-02.jpg">
           <img src="img/BD PROMO 1108-02.jpg" class="gallery__img" alt="Image 75">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--76">
+        <figure class="gallery__item gallery__item--76">
+          <a href="img/BD PROMO 1108-01.jpg">
           <img src="img/BD PROMO 1108-01.jpg" class="gallery__img" alt="Image 76">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--77">
+        <figure class="gallery__item gallery__item--77">
+          <a href="img/CN2_4.jpg">
           <img src="img/CN2_4.jpg" class="gallery__img" alt="Image 77">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--78">
+        <figure class="gallery__item gallery__item--78">
+          <a href="img/CN2_1.jpg">
           <img src="img/CN2_1.jpg" class="gallery__img" alt="Image 78">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--79">
+        <figure class="gallery__item gallery__item--79">
+          <a href="img/CN2_2.jpg">
           <img src="img/CN2_2.jpg" class="gallery__img" alt="Image 79">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--80">
+        <figure class="gallery__item gallery__item--80">
+          <a href="img/CN2_3.jpg">
           <img src="img/CN2_3.jpg" class="gallery__img" alt="Image 80">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--81">
+        <figure class="gallery__item gallery__item--81">
+          <a href="img/YF_promo.jpg">
           <img src="img/YF_promo.jpg" class="gallery__img" alt="Image 81">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--82">
+        <figure class="gallery__item gallery__item--82">
+          <a href="img/no promo_Mesa de trabajo 1.jpg">
           <img src="img/no promo_Mesa de trabajo 1.jpg" class="gallery__img" alt="Image 82">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--83">
+        <figure class="gallery__item gallery__item--83">
+          <a href="img/Pide Yogen_Mesa de trabajo 1.jpg">
           <img src="img/Pide Yogen_Mesa de trabajo 1.jpg" class="gallery__img" alt="Image 83">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--84">
+        <figure class="gallery__item gallery__item--84">
+          <a href="img/OnePizza_1.jpg">
           <img src="img/OnePizza_1.jpg" class="gallery__img" alt="Image 84">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--85">
+        <figure class="gallery__item gallery__item--85">
+          <a href="img/OP Promo 1108 CORREGIDA.jpg">
           <img src="img/OP Promo 1108 CORREGIDA.jpg" class="gallery__img" alt="Image 85">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--86">
+        <figure class="gallery__item gallery__item--86">
+          <a href="img/Pizza one 2.jpg">
           <img src="img/Pizza one 2.jpg" class="gallery__img" alt="Image 86">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--87">
+        <figure class="gallery__item gallery__item--87">
+          <a href="img/Sub final.jpg">
           <img src="img/Sub final.jpg" class="gallery__img" alt="Image 87">
+          </a>
         </figure>
 
-        <figure class= "gallery__item gallery__item--88">
+        <figure class="gallery__item gallery__item--88">
+          <a href="img/banner.png">
           <img src="img/banner.png" class="gallery__img" alt="Image 88">
+          </a>
         </figure>
 
       </div>
@@ -99,5 +137,10 @@
     <h2>Página creada por Axel Castro ©</h2>
 
   </footer>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+  <script src="main.js"></script>
 </body>
+
 </html>
